# jpinfectpy

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASETS.md  EXAMPLES.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/parquet/: bullet.parquet  place_prefecture.parquet  prefecture_en.parquet  sex_prefecture.parquet  unified.parquet
docs/: DATASETS.md  DISEASES.md  EXAMPLES.md  data-source.md  engines.md  index.md  manifest.schema.json  r-mapping.md
output/jupyter-notebook/: getting-started-jpinfectpy.ipynb
scripts/: build_datasets.py  build_release_data.py  inspect_bullet.py  inspect_data.py  verify_load_all.py
src/jp_idwr_db/: __init__.py  build_release_assets.py  config.py  data_manager.py  duckdb_build.py  io.py  manifest.py  types.py
src/jp_idwr_db/_internal/: validation.py
src/jp_idwr_db/data/: bullet.parquet  place_prefecture.parquet  prefecture_en.parquet  sentinel.parquet
src/jpinfectpy/: __init__.py  api.py  config.py  datasets.py  http.py  io.py  io_bullet.py  io_confirmed.py  transform.py  types.py  urls.py  utils.py
src/jpinfectpy/_internal/: __init__.py  download.py  read.py  sentinel_en_parser.py  validation.py
src/jpinfectpy/data/: __init__.py  bullet.parquet  place_prefecture.parquet  prefecture_en.parquet  sentinel.parquet  sex_prefecture.parquet
tests/: test_api.py  test_data_manager.py  test_datasets.py  test_download.py  test_duckdb_build.py  test_manifest.py  test_read.py  test_sentinel.py  test_sentinel_en_parser.py  test_transform.py  test_urls.py
tests/fixtures/: 2024-01-zensu.csv  Syu_01_1_2024.xlsx
