[project]
name = "jpinfectpy"
version = "0.1.0"
description = "Python port of the jpinfect R package for Japanese infectious disease surveillance data."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [{ name = "jpinfectpy contributors" }]
keywords = ["epidemiology", "surveillance", "japan", "infectious-disease", "polars", "pandas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
  "polars>=0.20",
  "pandas>=2.1",
  "httpx>=0.27",
  "platformdirs>=4.2",
  "openpyxl>=3.1",
  "fastexcel>=0.10",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
excel = ["fastexcel>=0.10"]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "pre-commit>=3.7",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/AlFontal/jpinfectpy"
Repository = "https://github.com/AlFontal/jpinfectpy"
Documentation = "https://AlFontal.github.io/jpinfectpy"
"Bug Tracker" = "https://github.com/AlFontal/jpinfectpy/issues"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/jpinfectpy", "README.md", "LICENSE", "CITATION.cff", "CHANGELOG.md"]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src/jpinfectpy/**"]
packages = ["src/jpinfectpy"]

[tool.ruff]
line-length = 100
indent-width = 4
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
allow_redefinition = false

[[tool.mypy.overrides]]
module = ["pandas.*", "openpyxl.*", "fastexcel.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
markers = ["integration: networked integration tests"]
