[project]
name = "jp-idwr-db"
version = "0.2.2"
description = "Japanese IDWR infectious disease database and analytics toolkit built on Polars."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [{ name = "jp-idwr-db contributors" }]
keywords = ["epidemiology", "surveillance", "japan", "infectious-disease", "polars"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
  "polars>=0.20",
  "httpx>=0.27",
  "platformdirs>=4.2",
  "openpyxl>=3.1",
  "fastexcel>=0.10",
  "pyarrow>=14.0",
]

[project.scripts]
jp-idwr-db = "jp_idwr_db.cli:main"

[project.optional-dependencies]
excel = ["fastexcel>=0.10"]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/AlFontal/jp-idwr-db"
Repository = "https://github.com/AlFontal/jp-idwr-db"
"Bug Tracker" = "https://github.com/AlFontal/jp-idwr-db/issues"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/jp_idwr_db", "README.md", "LICENSE", "CITATION.cff", "CHANGELOG.md"]

[tool.hatch.build.targets.sdist]
include = ["src/jp_idwr_db/**", "README.md", "LICENSE", "CITATION.cff", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
include = ["src/jp_idwr_db/**"]
packages = ["src/jp_idwr_db"]
only-packages = false

[tool.ruff]
line-length = 100
indent-width = 4
src = ["src", "tests"]
exclude = [
  "scripts/",
  "verify_urls.py",
  ".venv",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific rules
  "C4",   # flake8-comprehensions
  "PL",   # pylint
  "N",    # pep8-naming
  "ANN",  # flake8-annotations
  "D",    # pydocstyle
]
ignore = [
  "E501",    # line too long (handled by formatter)
  "ANN401",  # dynamically typed expressions (Any)
  "D100",    # missing docstring in public module (too strict)
  "D103",    # missing docstring in public function (too strict for tests)
  "D104",    # missing docstring in public package (too strict)
  "D203",    # 1 blank line required before class docstring (conflicts with D211)
  "D213",    # multi-line docstring summary should start at second line (conflicts with D212)
  "PLR0911", # too many return statements (intentional for download function)
  "PLR0912", # too many branches (intentional for complex logic)
  "PLR0913", # too many arguments to function call
  "PLR2004", # magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
allow_redefinition = false

[[tool.mypy.overrides]]
module = ["openpyxl.*", "fastexcel.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
markers = ["integration: networked integration tests"]

[tool.coverage.run]
source = ["jp_idwr_db"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
